--- a/ExpertTire/app/src/main/res/values/strings.xml
+++ b/ExpertTire/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ExpertTire</string>
+    <string name="title_activity_ubicar_punto_venta">Map</string>
 </resources>
